# issue6999

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: .gitignore  CMakeLists.txt  cc_webserver.c  cc_webserver.h  cc_wifi.c  cc_wifi.h  component.mk  main.c
main/certs/: cacert.pem  prvtkey.pem
main/html/: index.html  xterm.css
